# Bmk-dev

./: .gitattributes  .gitignore  =0.16  =1.4  CANDIDATES.md  MANIFEST.json  README.md  REPO_POOL.md  REPO_STATUS.md  analysis.md  codex_exec_last_message.txt  integration_gap_results.json  last_message_3.txt  prd.md  requirement_map.md  rubric.json  score_report_deepseek_v4_pro_001_unit_system_v1.json  score_report_doubao_seed_2_0_001_unit_system_v1.json  score_report_gpt_5_5_thinking_001_unit_system_v1.json  score_report_reference_unit_system_v1.json  score_summary.csv  source_repo.md  specbench_rp.html  weakness_table.md
.claude/: settings.local.json
analysis/: integration_gap_precise.json
archive/v1-runs/cleanroom/tork-cleanroom-smoke-20260628-v4/starter/: pyproject.toml
archive/v1-runs/cleanroom/tork-cleanroom-smoke-20260628-v4/starter/src/torkworkflow/: progress.py  retry.py  worker.py
docs/: AAAI_EXPERIMENT_PLAN.md  ACCEPTANCE_CHECKLIST.md  CANDIDATES.md  CLEANUP_PLAN.md  CONSTITUTION.md  DESIGN_MANUAL.md  DEV_STRUCTURE_PROPOSAL.md  FULL_REPRODUCTION_WORKFLOW_2026-06-28.md  FULL_REPRO_LAYER0_AUDIT_2026-06-28.md  ORACLE_STANDARD.md  PROGRAMBENCH_COST_ESTIMATE_20260713.md  QUALITY_GATE.md  RESCORE_20260713_SUMMARY.md  RESTRUCTURE_PLAN.md  SCOUT_2026-06-28_NEW_CANDIDATES.md  SPEC_STANDARD.md  STRUCTURAL_AUDIT.csv  TASK_REVIEW_ACTION_PLAN.md  WORKER_TASK_ORACLE_CLEANUP.md  WORKER_TASK_ORACLE_CLEANUP_RESULTS.md  codex_pipeline_prompt.md  intro_draft_v1.md  intro_draft_v2.md  intro_draft_v3.md  judge_reaudit_20260703.md  pipeline_weakness_table.md  (+4 more)
(+2086 files in other folders)
