[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torkworkflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
torkworkflow = "torkworkflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
